@@ -1,3 +1,8 @@
+2007-07-01  David Lawrence Ramsey  <pooka109@gmail.com>
+
+	* chars.c (nstrncasecmp, mbstrncasecmp): For efficiency, return
+	zero immediately if s1 and s2 point to the same string.
+
 2007-06-30  David Lawrence Ramsey  <pooka109@gmail.com>
 
 	* prompt.c (do_yesno_prompt): Remove redundant check for
